--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "vue": "^3.4.19",
+    "vue-router": "^4.5.1",
     "vuetify": "^3.9.5"
   },
   "devDependencies": {
