--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "axios": "^1.11.0",
+    "frontend": "file:",
     "vue": "^3.4.19",
     "vue-router": "^4.5.1",
     "vuetify": "^3.9.5"
